<resources>
    <string name="colorPrimary">#D53B32</string>
    <string name="colorPrimaryDark">#ffffff</string>
    <string name="colorAccent">#D81B60</string>
    <string name="colorWhite">#ffffff</string>
    <string name="colorBlack">#333333</string>
    <string name="colorBlue">#2196f3</string>
    <string name="colorTransWithe">#ccffffff</string>

    <string name="app_name">Rikkaの音乐盒</string>
    <string name="language_cn">中文</string>
    <string name="language_en">English</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="please_input_phonenumber">请输入手机号码</string>
    <string name="please_input_phonenumber_correctly">请输入有效的电话号码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="pwd_must_less_than_30">请输入小于30位的密码</string>
    <string name="login_fail">登录失败，请稍后重试</string>
    <string name="pwd_wrong">密码输入错误，请重试</string>
    <string name="login_phone_number">手机号登录</string>
    <string name="press_exit_again">再按一次退出应用</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册账号</string>
    <string name="in_developing">该功能还在开发中~</string>
    <string name="mine">我的</string>
    <string name="wow">发现</string>
    <string name="friend">朋友</string>
    <string name="feed">云村</string>
    <string name="msg">我的消息</string>
    <string name="mi">听歌识曲</string>
    <string name="ticket">演出</string>
    <string name="mall">商城</string>
    <string name="nearby">附近的人</string>
    <string name="pocket_music">口袋铃声</string>
    <string name="my_bill">我的订单</string>
    <string name="stop_time">定时停止播放</string>
    <string name="scan_qr">扫一扫</string>
    <string name="alarm">音乐闹钟</string>
    <string name="cloud_drive">音乐云盘</string>
    <string name="butter_data">在线听歌免流量</string>
    <string name="aboutus">关于Rikka</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting">设置</string>
    <string name="logout">退出</string>
    <string name="theme">个性换肤</string>
    <string name="day_recommend">每日推荐</string>
    <string name="playlist">歌单</string>
    <string name="rank">排行榜</string>
    <string name="radio">电台</string>
    <string name="live">直播</string>
    <string name="recommend_playlist">推荐歌单</string>
    <string name="playlist_playground">歌单广场</string>
    <string name="comment">评论</string>
    <string name="download">下载</string>
    <string name="multiselect">多选</string>
    <string name="playall">播放全部</string>
    <string name="next_play">下一首播放</string>
    <string name="collect">收藏到歌单</string>
    <string name="share">分享</string>
    <string name="singer">歌手：</string>
    <string name="album">专辑</string>
    <string name="watch_video">观看视频</string>
    <string name="songanme">歌名：</string>
    <string name="enter_correct_password">请正确输入密码</string>
    <string name="edit_personinfo">编辑资料</string>
    <string name="follows">关注：</string>
    <string name="followeds">粉丝：</string>
    <string name="user_playlist">音乐</string>
    <string name="user_dynamics">动态</string>
    <string name="user_info">个人信息</string>
    <string name="personal_info">个人信息</string>
    <string name="level_">等级:</string>
    <string name="region_">地区:</string>
    <string name="description">个人描述</string>
    <string name="create_day">创建日期:</string>
    <string name="search_history">历史记录</string>
    <string name="hot_search">热搜榜</string>
    <string name="search">搜索</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_search_history_clear">清空</string>
    <string name="should_delete_all_search_history">确定清空全部历史记录?</string>
    <string name="followin">+ 关注</string>
    <string name="already_follow">已关注</string>
    <string name="song">单曲</string>
    <string name="singer_hot_song">热门单曲</string>
    <string name="singer_albume">专辑</string>
    <string name="singer_feed">相关视频</string>
    <string name="singer_info">歌手信息</string>
    <string name="birthday">出生年月：</string>
    <string name="hometown">出生地：</string>
    <string name="hobby">兴趣爱好：</string>
    <string name="speciality">特长：</string>
    <string name="singer_more_detail"><![CDATA[完整歌手介绍 >]]></string>
    <string name="sim_singer">相似歌手</string>
    <string name="singer_desc">歌手介绍</string>
    <string name="about_ta">关于TA</string>
    <string name="hot_comment">精彩评论</string>
    <string name="new_comment">最新评论</string>
    <string name="local_music">本地音乐</string>
    <string name="recent_play">最近播放</string>
    <string name="my_radio">我的电台</string>
    <string name="my_collection">我的收藏</string>
    <string name="mine_fm">私人FM</string>
    <string name="smart_play">心动模式</string>
    <string name="my_album">我的数字专辑</string>
    <string name="my_album_sub">收藏的专辑</string>
    <string name="dj_cat">电台分类</string>
    <string name="dj_rank">电台排行</string>
    <string name="dj_hq">付费精品</string>
    <string name="recommend_dj">电台推荐</string>
    <string name="replace">换一换</string>
    <string name="playgift_dj">精品推荐</string>
    <string name="all_paygift">全部精品</string>
    <string name="cover_dj">创作|翻唱 ></string>
    <string name="voice_book_dj"><![CDATA[有声书 >]]></string>
    <string name="broadcast_dj"><![CDATA[广播剧 >]]></string>
    <string name="motion_dj"><![CDATA[情感频道 >]]></string>
    <string name="music_story_dj"><![CDATA[音乐故事 >]]></string>
    <string name="entertainment_dj"><![CDATA[娱乐|影视 >]]></string>
    <string name="beautiful_dj"><![CDATA[美文读物 >]]></string>
    <string name="electric_dj"><![CDATA[3D|电子 >]]></string>
    <string name="anim_dj"><![CDATA[二次元 >]]></string>
    <string name="show_dj"><![CDATA[脱口秀 >]]></string>
    <string name="title_activity_radio_cat">RadioCatActivity</string>
    <string name="cate_dj">电台分类</string>
    <string name="program">节目</string>
    <string name="dj_detail">详情</string>
</resources>

