<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_personal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/personal_info"
            android:textColor="#333333"
            android:textSize="@dimen/sp_18"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_personal_info"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/level_"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_personal_info"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toEndOf="@id/tv_level"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_level"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/region_"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_level"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toEndOf="@id/tv_region"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_region"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/create_day"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_birthday"
            android:layout_below="@id/region"
            android:layout_marginStart="@dimen/dp_5"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_10"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_birthday"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/description"
            android:textColor="#333333"
            android:textSize="@dimen/sp_18"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/description"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>