<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_fm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_12">

            <ImageView
                android:id="@+id/iv_fm"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:src="@drawable/ic_mine_fm" />

            <TextView
                android:id="@+id/tv_fm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_fm"
                android:text="@string/mine_fm"
                android:textSize="@dimen/sp_12" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_gap"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/rl_top_bar"
        android:layout_marginTop="@dimen/dp_6"
        android:background="#f0f0f0" />

    <RelativeLayout
        android:id="@+id/rl_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_gap"
        android:layout_marginTop="@dimen/dp_5">

        <com.rikkathewrold.rikkamusic.widget.MineItemView
            android:id="@+id/local_music"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            app:icon="@drawable/ic_music"
            app:name="@string/local_music"
            app:show_gap="true" />

        <com.rikkathewrold.rikkamusic.widget.MineItemView
            android:id="@+id/recent_play"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/local_music"
            android:visibility="gone"
            app:icon="@drawable/ic_recent_play"
            app:name="@string/recent_play"
            app:show_gap="true" />

        <com.rikkathewrold.rikkamusic.widget.MineItemView
            android:id="@+id/my_radio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/recent_play"
            app:icon="@drawable/ic_my_radio"
            app:name="@string/my_radio"
            app:show_gap="true"
            android:visibility="gone"/>

        <com.rikkathewrold.rikkamusic.widget.MineItemView
            android:id="@+id/my_collection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/my_radio"
            app:icon="@drawable/ic_my_collection"
            app:name="@string/my_collection"
            app:show_gap="false" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_gap"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:layout_below="@id/rl_mine"
        android:background="#f5f5f5" />

    <RelativeLayout
        android:id="@+id/rl_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_below="@id/rl_gap">

        <ImageView
            android:id="@+id/iv_icon_below"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:src="@drawable/shape_below"
            android:layout_marginTop="@dimen/dp_8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_3"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_icon_below"
            android:text="创建的歌单"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_mine_playlist"
        android:layout_below="@id/rl_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>