<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fl_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_95"
                android:background="@color/colorPrimary" />

            <com.youth.banner.Banner
                android:id="@+id/wow_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_160"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                app:image_scale_type="fit_xy"
                app:indicator_drawable_selected="@drawable/banner_selected"
                app:indicator_drawable_unselected="@drawable/banner_unselected"
                app:indicator_height="@dimen/dp_7"
                app:indicator_margin="@dimen/dp_4"
                app:indicator_width="@dimen/dp_7" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_function"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_74"
            android:layout_below="@id/fl_banner"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">

            <RelativeLayout
                android:id="@+id/rl_day_rec"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_day_recommend"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_daily_recommend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_day_recommend"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/day_recommend"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_12" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_play_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_playlist"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_playlist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_playlist"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/playlist"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_12" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_rank"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_rank"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_rank" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_rank"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/rank"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_12" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_radio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_radio"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_radio" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_radio"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/radio"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_12" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_live"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_live"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_live" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_live"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/live"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_12" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_gap"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ll_function"
            android:layout_marginTop="@dimen/dp_12"
            android:background="#f0f0f0" />

        <RelativeLayout
            android:id="@+id/rl_show_recommend_playlist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/tv_gap"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_25"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:text="@string/recommend_playlist"
                android:textColor="#333333"
                android:textSize="@dimen/sp_18"
                android:typeface="sans" />

            <TextView
                android:id="@+id/tv_playlist_playground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@drawable/bg_playlist_playground"
                android:paddingLeft="@dimen/dp_15"
                android:paddingTop="@dimen/dp_8"
                android:paddingRight="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/playlist_playground"
                android:textColor="#353636"
                android:textSize="@dimen/sp_11" />
        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recommend_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_show_recommend_playlist"
            android:orientation="horizontal" />
    </RelativeLayout>
</ScrollView>